# MyMediaEditor

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: log.h  player.cpp
app/src/main/kotlin/com/tuyuanlin/media/editor/app/: CameraActivity.kt  EditorActivity.kt  MainActivity.kt  PlayerActivity.kt
app/src/main/kotlin/com/tuyuanlin/media/editor/middleware/: PermissionChecker.kt  Player.java  Player.kt
app/src/main/res/drawable/: play_button_bg.xml
app/src/main/res/layout/: camera_activity_content.xml  editor_activity_content.xml  main_activity_content.xml  player_activity_content.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
